--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AwesomePos</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_817396_9engqoeilmi.css">
     <style>
-      #app{
+      html,body,#app{
         height: 100%;
         padding: 0;
         margin: 0;
